Adds middleman-vegas gem to handle syntax highlighting
Under the covers this uses the same rouge syntax lexer/highlighter
that was there before (albiet a later version). The gem provides
support to code fences and a code helper which is the same as
before but now it allows you to specify additional metadta after
the code language declaration for the code fence.

* Removes the javascript library that performed this highlighting
* Gemfile makes use of the new gem
* Config has been updated to load the gem by name
* A Rouge Lexer for Habitat Studios has been added to
  assist with processing the tokenization and ultimately
  its style and colorization
* Stylesheet has been added to support the new code format

@see https://github.com/burtlo/middleman-vegas#syntax

Signed-off-by: Franklin Webber <franklin@chef.io>

--- a/www/Gemfile
+++ b/www/Gemfile
@@ -12,6 +12,7 @@ gem 'tzinfo-data', platforms: [:mswin, :mingw]
 
 # For better code snippets in markdown
 gem 'redcarpet'
+gem 'middleman-vegas'
 
 # Middleman Gems
 gem 'middleman', '~> 4.1'
@@ -20,9 +21,9 @@ gem 'middleman-livereload'
 gem 'middleman-s3_sync'
 gem 'middleman-sprockets', '~> 4.0.0.rc.1'
 gem 'middleman-blog', '~> 4.0'
-gem 'middleman-syntax'
 gem 'middleman-minify-html'
 gem 'mime-types'
+
 
 gem 'rubocop', require: false
 gem 'scss_lint', require: false
