Share `hab-sup start` CLAP config with `hab svc start` aliases.
This fixes https://github.com/habitat-sh/habitat/issues/3130, but further work
can be done to make it more general and address all similar alias-related
issues and reduce duplication of CLAP code.

Signed-off-by: Jon Bauman <5906042+baumanj@users.noreply.github.com>

--- a/components/hab/Cargo.toml
+++ b/components/hab/Cargo.toml
@@ -38,6 +38,9 @@ path = "../core"
 [dependencies.habitat_common]
 path = "../common"
 
+[dependencies.habitat_sup]
+path = "../sup"
+
 [dependencies.habitat_depot_client]
 path = "../builder-depot-client"
 
